# django-girls-tutorial

./: .gitignore  README.me  pyproject.toml
.github/workflows/: github_ci.yml
config/: README.me  env-sample
mysite/: settings.py  urls.py
mysite/base/: urls.py  views.py
mysite/base/migrations/: 0001_initial.py
mysite/base/templates/base/: base.html  post_detail.html  post_edit.html  post_list.html
